# esfpc

./: .gitignore  Cargo.toml  build.rs  make.py
.github/workflows/: ci.yml  cpp.yml  rust.yml
cxx/: main.cpp  main.hpp  util.cpp  util.hpp
include/: EuroScopePlugIn.hpp
rules/: eddf.json  edds.json
scripts/: cppcheck.py
src/: ast.rs  config.rs  grammar.pest  lib.rs  parser.rs
src/bridge/: main.cpp  main.hpp  util.cpp  util.hpp
src/lang/: ast.rs  lexer.rs  parser.rs
tests/: rules.rs
